# hero-script

./: Cargo.toml  README.md
.github/workflows/: build-windows.yml
keyboard-hook/: Cargo.toml
keyboard-hook/src/: lib.rs
src/: app.rs  error.rs  main.rs
src/config/: hero.rs  loader.rs  mod.rs
src/heroes/: mod.rs  riven.rs  template.rs  yasuo.rs
src/keyboard/: listener.rs  mod.rs  simulator.rs
src/macro_engine/: combo.rs  event_processor.rs  mod.rs  timing.rs
src/ui/: mod.rs  tray.rs
