[package]
name = "lol-macro"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A League of Legends keyboard macro program"

[dependencies]
# 键盘/鼠标监听和模拟
device_query = "1.1.3"     # 键盘监听
enigo = "0.1.3"            # 键盘鼠标模拟
winapi = { version = "0.3.9", features = ["winuser", "windef"] } # 用于低级键盘钩子和模拟

# 异步处理
tokio = { version = "1.28.2", features = ["full"] }

# 配置相关
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.6"

# 界面
tray-item = "0.8.0"        # 系统托盘

# 工具库
log = "0.4"
env_logger = "0.10.0"
thiserror = "1.0"          # 错误处理
chrono = "0.4"             # 时间处理
once_cell = "1.18.0"       # 单例模式实现 